syntax = "proto3";
package idl;
option go_package = "../internal/rpc/rpcGen";

message User {
  int64 id = 1;
  string name = 2;
  int64 follow_count = 3;
  int64 follower_count = 4;
  bool is_follow = 5;
}

message RegisterRequest{
  string username = 1;  // 注册用户名
  string password = 2;  // 密码
}

message RegisterResponse{
  int32 status_code = 1;
  string status_msg = 2;
  uint32 user_id = 3;
  string token = 4;
}

message LoginRequest{
  string username = 1;  // 注册用户名
  string password = 2;  // 密码
}

message LoginResponse{
  int32 status_code = 1;
  string status_msg = 2;
  uint32 user_id = 3;
  string token = 4;
}

message QueryInfoRequest{
  int64 user_id = 1;  // 用户鉴权token
}

message QueryInfoResponse{
  int32 status_code = 1;
  string status_msg = 2;
  User user = 3;
}

service AuthService{
  rpc Register(RegisterRequest) returns (RegisterResponse){}
  rpc Login(LoginRequest) returns (LoginResponse){}
  rpc QueryInfo(QueryInfoRequest) returns (QueryInfoResponse){}
}